tests/liquid/neg/heap-st02.js
/*@ foo :: (<l>)/l |-> {a:{number | true }} =>
            void/l |-> {a:{number | v > 0 }} */
function foo(p) {
    return;
}
